Changes in version 2.16.0
+ Add a new vignette about cloud notebooks with RCy3
+ Doc fixes:
  - Conflicting Brightness/Contrast documentation, #172
  - Conflicting Opacity documentation, #173
  - updateAnnotationText cleanup, #177
+ New functions:
  - createView
+ Bug fixes:
  - addAnnotationShape customShape can only add rectangle, #160
  - setEdgeLineWidthMapping issue, #164
  - openAppStore function opens the Cytoscape App Store 404 web page, #169
  - groupAnnotation cleanup, #175
Changes in version 2.14.0
+ Cleaned up dependencies, dramatically reducing RCy3 package installation time
+ New functions:
  - add and update Annotations
  - uniqueList parameter added to edgeNameToEdgeSUID and nodeNameToNodeSUID, #139
+ Bug fixes:
  - loadTableData now works with tibbles, #143
  - sandboxSendTo now works with cys and png, #138
  - .verifySupportedVersions fixed comparisons, #152
Changes in version 2.12.x
+ Doc fixes
  - note about metabolite databases, #146
+ Bug fixes
  - createVisualStyle for notebooks, #145
  - regression bug for relative paths, #141
  - filepath handling in export functions, #122
  - Sys.sleep added to setVisualStyle, #137
Changes in version 2.12.0
+ New support for cloud-hosted Jupyter notebooks!
  - Jyputer notebooks running RCy3 in the cloud can communicate with local Cytoscape instances
  - Includes a Sandbox mechanism to manage file transfers between cloud and local dir
+ New functions:
  - addAnnotationText
  - getAnnotationList
  - deleteAnnotation
  - setters for Filter, Model Propagation and Catchup delays
  - many sandbox-related functions
  - getStyleMapping
  - getAllStyleMappings
  - paletteColorRandom
  - paletteColorBrewer* (33 in total!)
  - internal mapping value generators for color, opacity, dimension, line styles, arrows and shapes
+ New parameters:
  - overwrite_file added to export functions
  - apply added to create_*_filter functions
  - ndex.url and ndex.version added to CyNDEx functions