@@ -250,6 +250,7 @@ export(sandboxSendTo)
 export(sandboxSet)
 export(sandboxUrlTo)
 export(saveSession)
+export(selectAll)
 export(selectAllEdges)
 export(selectAllNodes)
 export(selectEdges)
